--- a/src/net35/Radical.Windows/packages.config
+++ b/src/net35/Radical.Windows/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Expression.Blend.Sdk3" version="1.0.1340.1" targetFramework="net35" />
+  <package id="Radical" version="1.5.2.1" targetFramework="net35" />
 </packages>
