--- a/src/net35/Radical.Windows/Radical.Windows.csproj
+++ b/src/net35/Radical.Windows/Radical.Windows.csproj
@@ -75,6 +75,10 @@
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="PresentationFramework.Aero" />
+    <Reference Include="Radical, Version=1.5.2.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Radical.1.5.2.1\lib\net35\Radical.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -90,9 +94,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\lib\Radical.AssemblyInfo.cs">
-      <Link>Properties\Radical.AssemblyInfo.cs</Link>
-    </Compile>
     <Compile Include="CommandEvent.cs" />
     <Compile Include="ComponentModel\Input\IDelegateCommand.cs" />
     <Compile Include="ComponentModel\IEntityCollectionView.cs" />
@@ -192,12 +193,6 @@
       <SubType>Code</SubType>
     </Compile>
     <AppDesigner Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Radical\Radical.csproj">
-      <Project>{C669FC1F-2AAF-4F22-B557-9C68F69A0B97}</Project>
-      <Name>Radical</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
