--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@
 #     DEVELOPMENT BRANCH
 #
 # build in Debug mode and deploy to MyGet.org as pre-release
-- version: 1.4.0-alpha1+{build}
+- version: 1.4.1-unstable+{build}
   branches:
     only:
     - develop
@@ -74,6 +74,6 @@
   - path: src\build\nuget\*.nupkg
   deploy:
   - provider: Environment
-    name: MyGet feed
+    name: NuGet public feed
     on:
       branch: master
