--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,37 +2,38 @@
 #     DEVELOPMENT BRANCH
 #
 # build in Debug mode and deploy to MyGet.org as pre-release
-- version: 1.4.1-unstable+{build}
-  branches:
+
+- branches:
     only:
     - develop
+
   configuration: Debug
   platform: Any CPU
+
   environment:
     use_build_number_in_packages: true
-  pull_requests:
-    do_not_increment_build_number: true
+
+  artifacts:
+    - path: src\build\Debug
+    - path: src\build\nuget\*.nupkg
+
   cache:
-  - src\packages -> src\**\packages.config
-  install:
-  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/RadicalFx/Radical.Build/master/appveyor-buildversion.ps1'))
-  assembly_info:
-    patch: true
-    file: '**\AssemblyInfo.*'
-    assembly_version: '$(assembly_version)'
-    assembly_file_version: '$(assembly_file_version)'
-    assembly_informational_version: '$(assembly_informational_version)'
+    - src\packages -> src\**\packages.config
+
   before_build:
-  - nuget restore "src\Radical.Windows.sln"
+    - nuget restore "src\Radical.Windows.sln"
+
   build:
     project: src\Radical.Windows.sln
     verbosity: minimal
+
   after_build:
-  - md "src\build\nuget"
-  - nuget pack "src\nuget\Radical.Windows.nuspec" -Version "%package_version%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
-  artifacts:
-  - path: src\build\Debug
-  - path: src\build\nuget\*.nupkg
+    - md "src\build\nuget"
+    - nuget pack "src\nuget\Radical.Windows.nuspec" -Version "%GitVersion_NuGetVersion%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
+
+  pull_requests:
+    do_not_increment_build_number: true
+
   deploy:
   - provider: Environment
     name: MyGet feed
@@ -43,35 +44,44 @@
 #     MASTER BRANCH
 #
 # build in Release mode and deploy to NuGet.org
-- version: 1.4.0+{build}
-  branches:
+
+- branches:
     only:
     - master
+
   configuration: Release
   platform: Any CPU
-  pull_requests:
-    do_not_increment_build_number: true
+
+  environment:
+    use_build_number_in_packages: true
+
+  artifacts:
+    - path: src\build\Release
+    - path: src\build\nuget\*.nupkg
+
   cache:
-  - src\packages -> src\**\packages.config
-  install:
-  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/RadicalFx/Radical.Build/master/appveyor-buildversion.ps1'))
-  assembly_info:
-    patch: true
-    file: '**\AssemblyInfo.*'
-    assembly_version: '$(assembly_version)'
-    assembly_file_version: '$(assembly_file_version)'
-    assembly_informational_version: '$(assembly_informational_version)'
+    - src\packages -> src\**\packages.config
+
   before_build:
-  - nuget restore "src\Radical.Windows.sln"
+    - nuget restore "src\Radical.Windows.sln"
+
   build:
     project: src\Radical.Windows.sln
     verbosity: minimal
+
   after_build:
-  - md "src\build\nuget"
-  - nuget pack "src\nuget\Radical.Windows.nuspec" -Version "%package_version%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
-  artifacts:
-  - path: src\build\Release
-  - path: src\build\nuget\*.nupkg
+    - md "src\build\nuget"
+    - nuget pack "src\nuget\Radical.Windows.nuspec" -Version "%GitVersion_NuGetVersion%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
+
+  pull_requests:
+    do_not_increment_build_number: true
+
+  test:
+    categories:
+      except:
+      - ObjectDumper
+      - AsyncWorker
+
   deploy:
   - provider: Environment
     name: NuGet public feed
