--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,11 +7,9 @@
     only:
     - develop
 
+  skip_tags: true
   configuration: Debug
   platform: Any CPU
-
-  environment:
-    use_build_number_in_packages: true
 
   artifacts:
     - path: src\build\Debug
@@ -31,9 +29,6 @@
     - md "src\build\nuget"
     - nuget pack "src\nuget\Radical.Windows.nuspec" -Version "%GitVersion_NuGetVersion%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
 
-  pull_requests:
-    do_not_increment_build_number: true
-
   deploy:
   - provider: Environment
     name: MyGet feed
@@ -49,11 +44,9 @@
     only:
     - master
 
+  skip_tags: true
   configuration: Release
   platform: Any CPU
-
-  environment:
-    use_build_number_in_packages: true
 
   artifacts:
     - path: src\build\Release
@@ -73,9 +66,6 @@
     - md "src\build\nuget"
     - nuget pack "src\nuget\Radical.Windows.nuspec" -Version "%GitVersion_NuGetVersion%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
 
-  pull_requests:
-    do_not_increment_build_number: true
-
   test:
     categories:
       except:
@@ -85,5 +75,13 @@
   deploy:
   - provider: Environment
     name: NuGet public feed
+    on:
+      branch: master
+  - provider: GitHub    
+    release: $(GitVersion_NuGetVersion)
+    description: 'Release v$(GitVersion_NuGetVersion)'
+    auth_token:
+      secure: 2ijF4OfPYfIUTunubL/Z04ogADL9sx/gKW1jMRNJnAa1OpHZpSvCKmP0gvNs8C7h
+    artifact: /.*\.nupkg/, src\build\Release.zip
     on:
       branch: master
