--- a/src/net35/Radical.Windows/Radical.Windows.csproj
+++ b/src/net35/Radical.Windows/Radical.Windows.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Presentation\Behaviors\Password.cs" />
     <Compile Include="Presentation\Behaviors\PasswordBoxBehavior.cs" />
     <Compile Include="Presentation\Behaviors\RoutedEventHandlerBehavior.cs" />
+    <Compile Include="Presentation\Behaviors\ScrollViewerManager.cs" />
     <Compile Include="Presentation\Behaviors\WindowControlBoxBehavior.cs" />
     <Compile Include="Presentation\Behaviors\TextBox Behaviors\DisableUndoManagerBehavior.cs" />
     <Compile Include="Presentation\Behaviors\WindowsManager.cs" />
