Added ScrollIntoViewForListBox Behavior (#51)

--- a/src/net35/Radical.Windows/Radical.Windows.csproj
+++ b/src/net35/Radical.Windows/Radical.Windows.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Presentation\Behaviors\DragDropBehavior\DragOverArgs.cs" />
     <Compile Include="Presentation\Behaviors\DragDropBehavior\DragDropOperationArgs.cs" />
     <Compile Include="Presentation\Behaviors\MouseManager.cs" />
+    <Compile Include="Presentation\Behaviors\ListBoxBehaviors\ScrollIntoViewForListBox.cs" />
     <Compile Include="Presentation\Behaviors\OverlayAdorner\ContentOverlayAdorner.cs" />
     <Compile Include="Presentation\Behaviors\OverlayAdorner\Overlay.cs" />
     <Compile Include="Presentation\Behaviors\OverlayAdorner\OverlayBehavior.cs" />
