Added ScrollIntoView for DataGrid Control

--- a/src/net45/Radical.Windows/Radical.Windows.csproj
+++ b/src/net45/Radical.Windows/Radical.Windows.csproj
@@ -352,8 +352,11 @@
     <Compile Include="..\..\net35\Radical.Windows\WeakEvent Managers\MonitorChangedWeakEventManager.cs">
       <Link>WeakEvent Managers\MonitorChangedWeakEventManager.cs</Link>
     </Compile>
-    <Compile Include="..\..\net40\Radical.Windows\Presentation\Behaviors\DataGridBehavior.cs">
-      <Link>Presentation\Behaviors\DataGridBehavior.cs</Link>
+    <Compile Include="..\..\net40\Radical.Windows\Presentation\Behaviors\DataGridBehaviors\DataGridBehavior.cs">
+      <Link>Presentation\Behaviors\DataGridBehaviors\DataGridBehavior.cs</Link>
+    </Compile>
+    <Compile Include="..\..\net40\Radical.Windows\Presentation\Behaviors\DataGridBehaviors\ScrollIntoViewForDataGrid.cs">
+      <Link>Presentation\Behaviors\DataGridBehaviors\ScrollIntoViewForDataGrid.cs</Link>
     </Compile>
     <Compile Include="Presentation\Behaviors\WindowsManager.cs" />
   </ItemGroup>
