--- a/src/net45/Radical.Windows/Radical.Windows.csproj
+++ b/src/net45/Radical.Windows/Radical.Windows.csproj
@@ -180,6 +180,9 @@
     <Compile Include="..\..\net35\Radical.Windows\Presentation\Behaviors\ListView Behaviors\ListViewManager.cs">
       <Link>Presentation\Behaviors\ListView Behaviors\ListViewManager.cs</Link>
     </Compile>
+    <Compile Include="..\..\net35\Radical.Windows\Presentation\Behaviors\ListView Behaviors\ScrollIntoViewForListView.cs">
+      <Link>Presentation\Behaviors\ListView Behaviors\ScrollIntoViewForListView.cs</Link>
+    </Compile>
     <Compile Include="..\..\net35\Radical.Windows\Presentation\Behaviors\ListView Behaviors\SelectionHandler.cs">
       <Link>Presentation\Behaviors\ListView Behaviors\SelectionHandler.cs</Link>
     </Compile>
@@ -361,7 +364,6 @@
     <Compile Include="..\..\net40\Radical.Windows\Presentation\Behaviors\ListBoxBehaviors\ManipulationBoundaryFeedback.cs">
       <Link>Presentation\Behaviors\ListBoxBehaviors\ManipulationBoundaryFeedback.cs</Link>
     </Compile>
-    <Compile Include="Presentation\Behaviors\ListView Behaviors\ScrollIntoViewForListView.cs" />
     <Compile Include="Presentation\Behaviors\WindowsManager.cs" />
   </ItemGroup>
   <ItemGroup>
