--- a/src/Radical.Windows/Radical.Windows.csproj
+++ b/src/Radical.Windows/Radical.Windows.csproj
@@ -8,7 +8,7 @@
     <Authors>Mauro Servienti, Michael Denny, Nazareno Manco</Authors>
     <Description>Radical is an infrastructure framework whose primary role is to help in the development of composite WPF applications based on the Model View ViewModel pattern.</Description>
     <PackageLicenseUrl>https://github.com/RadicalFx/radical.windows/blob/master/license.md</PackageLicenseUrl>
-    <PackageTags>Radical, Radical.Windows</PackageTags>
+    <PackageTags>Radical Radical.Windows</PackageTags>
     <PackageIconUrl>http://www.radicalframework.com/img/radical-ico.png</PackageIconUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
