--- a/src/Radical.Windows/Radical.Windows.csproj
+++ b/src/Radical.Windows/Radical.Windows.csproj
@@ -35,12 +35,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Expression.Blend.Sdk" Version="1.0.2" />
+    <PackageReference Include="Expression.Blend.Sdk" Version="[1.0.2]" />
     <PackageReference Include="MinVer" Version="1.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Radical" Version="2.0.0-Alpha.1" />
+    <PackageReference Include="Radical" Version="[2.0.0-Alpha.1,3.0.0)" />
   </ItemGroup>
 
   <ItemGroup>
