--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,6 +3,6 @@ update_configs:
   - package_manager: "dotnet:nuget"
     directory: "/src"
     update_schedule: "live"
-  - package_manager: "dotnet:nuget"
-    directory: "/targets"
-    update_schedule: "live"
+#  - package_manager: "dotnet:nuget"
+#    directory: "/targets"
+#    update_schedule: "live"
