--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,57 +1,14 @@
-#
-#     DEVELOPMENT BRANCH
-#
-# build in Debug mode and deploy to MyGet.org as pre-release
-
 - branches:
     only:
-    - develop
+    - release-*
 
-  skip_tags: true
-  configuration: Debug
-  platform: Any CPU
-
-  artifacts:
-    - path: src\build\Debug
-    - path: src\build\nuget\*.nupkg
-
-  cache:
-    - src\packages -> src\**\packages.config
-
-  before_build:
-    - appveyor DownloadFile https://dist.nuget.org/win-x86-commandline/v3.2.0/nuget.exe
-    - nuget restore "src\Radical.Windows.sln"
-
-  build:
-    project: src\Radical.Windows.sln
-    verbosity: minimal
-
-  after_build:
-    - md "src\build\nuget"
-    - nuget pack "src\nuget\Radical.Windows.nuspec" -Version "%GitVersion_NuGetVersion%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
-
-  deploy:
-  - provider: Environment
-    name: MyGet feed
-    on:
-      branch: develop
-
-#
-#     MASTER BRANCH
-#
-# build in Release mode and deploy to NuGet.org
-
-- branches:
-    only:
-    - master
-
-  skip_tags: true
-  configuration: Release
+  skip_tags: false
+  configuration: release
   platform: Any CPU
 
   artifacts:
     - path: src\build\Release
-    - path: src\build\nuget\*.nupkg
+    - path: src\build\Release\*.nupkg
 
   cache:
     - src\packages -> src\**\packages.config
@@ -67,23 +24,3 @@
   after_build:
     - md "src\build\nuget"
     - nuget pack "src\nuget\Radical.Windows.nuspec" -Version "%GitVersion_NuGetVersion%" -Properties "configuration=%CONFIGURATION%" -OutputDirectory "src\build\nuget"
-
-  test:
-    categories:
-      except:
-      - ObjectDumper
-      - AsyncWorker
-
-  deploy:
-  - provider: Environment
-    name: NuGet public feed
-    on:
-      branch: master
-  - provider: GitHub    
-    release: $(GitVersion_NuGetVersion)
-    description: 'Release v$(GitVersion_NuGetVersion)'
-    auth_token:
-      secure: 2ijF4OfPYfIUTunubL/Z04ogADL9sx/gKW1jMRNJnAa1OpHZpSvCKmP0gvNs8C7h
-    artifact: /.*\.nupkg/, src\build\Release.zip
-    on:
-      branch: master
