--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,7 @@ artifacts:
 before_build:
   - nuget restore .\src\Radical.Windows.sln
 
-build:
-  project: src\Radical.Windows.sln
-  verbosity: minimal
+build_script:
+  - devenv .\src\Radical.Windows.sln /Build Release
 
 deploy: off
