--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,7 @@ platform: Any CPU
 
 artifacts:
 - path: ./**/*.nupkg
+- path: ./**/*.snupkg
 
 before_build:
   - nuget restore .\src\Radical.Windows.sln
