--- a/src/Radical.Windows/Radical.Windows.csproj
+++ b/src/Radical.Windows/Radical.Windows.csproj
@@ -34,7 +34,7 @@
 
   <Target Name="AppVeyorPullRequestsTarget" AfterTargets="MinVer" Condition="'$(APPVEYOR_PULL_REQUEST_NUMBER)' != ''">
     <PropertyGroup>
-      <PackageVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)-PR.$(APPVEYOR_PULL_REQUEST_NUMBER).$(APPVEYOR_BUILD_ID).$(MinVerPreRelease)</PackageVersion>
+      <PackageVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)-$(MinVerPreRelease).PR.$(APPVEYOR_PULL_REQUEST_NUMBER).$(APPVEYOR_BUILD_ID)</PackageVersion>
       <PackageVersion Condition="'$(MinVerBuildMetadata)' != ''">$(PackageVersion)+$(MinVerBuildMetadata)</PackageVersion>
       <Version>$(PackageVersion)</Version>
     </PropertyGroup>
