--- a/src/Radical.Windows/Radical.Windows.csproj
+++ b/src/Radical.Windows/Radical.Windows.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Effects\GrayscaleEffect.ps" />
+    <Resource Include="Resources\Effects\GrayscaleEffect.ps" />
   </ItemGroup>
 
   <ItemGroup>
