Run tests on the solution

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,6 @@ build_script:
   - '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\devenv.com" .\src\Radical.Windows.sln /Build Release'
 
 test_script:
-  - dotnet test .\src\Radical.Windows.Tests\Radical.Windows.Tests.csproj --no-build --no-restore
+  - dotnet test .\src\Radical.Windows.sln --no-build
 
 deploy: off
