Do not run on branch release-1.6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,7 @@ on:
     branches:
     - master
     - release-*
-    branches-ignore:
-    - release-1.6
+    - '!release-1.6'
     tags:
     - '*.*.*'
   pull_request:
