--- a/src/nuget.config
+++ b/src/nuget.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="Radical Unstable" value="https://www.myget.org/F/radical-unstable/api/v2" />
-    <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="Radical Unstable" value="https://www.myget.org/F/radical-unstable/api/v3/index.json" />
   </packageSources>
 </configuration>
