--- a/src/Radical.Windows.Tests/Radical.Windows.Tests.csproj
+++ b/src/Radical.Windows.Tests/Radical.Windows.Tests.csproj
@@ -16,6 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
+    <PackageReference Include="Radical" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.19" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Radical.Windows\Radical.Windows.csproj" />
   </ItemGroup>
 
