--- a/src/Radical.Windows/Radical.Windows.csproj
+++ b/src/Radical.Windows/Radical.Windows.csproj
@@ -62,6 +62,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[3.1.2,4.0.0)" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="[3.1.2,4.0.0)" />
     <PackageReference Include="Radical" Version="[2.0.0,3.0.0)" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="[1.1.19,2.0.0)" />
   </ItemGroup>
