--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,36 @@ on:
   pull_request:
 jobs:
   build:
-    name: 'Compile & test on Windows'
     runs-on: windows-latest
+    env:
+      Solution_Path: src\Radical.Windows.sln
+      Test_Project_Path: src\Radical.Windows.Tests\Radical.Windows.Tests.csproj
+      Wpf_Project_Path: src\Radical.Windows\Radical.Windows.csproj
+    
     steps:
-    - uses: actions/checkout@v2.0.0
-    - run: 'echo %CD%'
-    - run: '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\devenv.com D:\a\Radical.Windows\Radical.Windows\src\Radical.Windows.sln /Build Release"'
-    - run: dotnet test .\src\Radical.Windows.sln --no-build
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      
+          # Install the .NET Core workload
+      - name: Install .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.100
+        
+      # Add  MsBuild to the PATH: https://github.com/microsoft/setup-msbuild
+      - name: Setup MSBuild.exe
+        uses: microsoft/setup-msbuild@v1.0.0
+      
+      # Restore the application
+      - name:  Restore the Wpf application to populate the obj folder
+        run: msbuild $env:Solution_Path /t:Restore /p:Configuration=Release
+        
+      # Build the Windows Application Packaging project
+      - name: Build Solution
+        run: msbuild $env:Solution_Path /p:Configuration=Release
+      
+      # Test
+      - name: Execute Unit Tests
+        run: dotnet test $env:Test_Project_Path --no-build
