--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,4 @@ jobs:
       
       # Test
       - name: Execute Unit Tests
-        run: dotnet test $env:Test_Project_Path --no-build
+        run: dotnet test $env:Test_Project_Path --no-build --configuration Release
