--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,7 +16,7 @@ jobs:
       Solution_Path: src\Radical.Windows.sln
       Test_Project_Path: src\Radical.Windows.Tests\Radical.Windows.Tests.csproj
       Wpf_Project_Path: src\Radical.Windows\Radical.Windows.csproj
-      Artifacts_Folder: src\Radical.Windows\Bin\$env:Configuration
+      Bin_Folder: src\Radical.Windows\Bin
     
     steps:
       - name: Checkout
@@ -48,4 +48,4 @@ jobs:
 
       # Push to Myget
       - name: Push to Myget
-        run: dotnet nuget push $env:Artifacts_Folder\*.nupkg --skip-duplicate --source https://www.myget.org/F/radical-unstable/api/v2/package --api-key $env:MyGet_API_Key
+        run: dotnet nuget push $env:Bin_Folder\$env:Configuration\*.nupkg --skip-duplicate --source https://www.myget.org/F/radical-unstable/api/v2/package --api-key $env:MyGet_API_Key
