--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,7 @@ jobs:
       Test_Project_Path: src\Radical.Windows.Tests\Radical.Windows.Tests.csproj
       Wpf_Project_Path: src\Radical.Windows\Radical.Windows.csproj
       Bin_Folder: src\Radical.Windows\Bin
+      GITHUB_PULL_REQUEST_NUMBER: ${{ github.event.number }}
     
     steps:
       - name: Checkout
@@ -24,7 +25,10 @@ jobs:
         with:
           fetch-depth: 0
       
-          # Install the .NET Core workload
+      - name: Echo PR number
+        run: echo  $env:GITHUB_PULL_REQUEST_NUMBER
+        
+      # Install the .NET Core workload
       - name: Install .NET Core
         uses: actions/setup-dotnet@v1
         with:
