--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,10 +24,11 @@ artifacts:
 - path: ./**/*.snupkg
 
 before_build:
-  - nuget restore .\src\Radical.Windows.sln
+  - '"C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe'
 
 build_script:
-  - '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\devenv.com" .\src\Radical.Windows.sln /Build Release'
+  - 'msbuild .\src\Radical.Windows.sln /t:Restore /p:Configuration=Release'
+  - 'msbuild .\src\Radical.Windows.sln /p:Configuration=Release'
 
 test_script:
   - dotnet test .\src\Radical.Windows.sln --no-build
